--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/layouts/search-gallery.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/layouts/search-gallery.xhtml
@@ -58,12 +58,23 @@
 				<ul class="unordenedSearchGalleryClearList" style="margin-left: 20px;">
 					
 					<li>
+							<!-- image base -->
 							<a href="#" ><img src="../images/note-prod.jpg"/></a>
+							
+							<!-- desc box -->
 							<div >
+							
+								<!-- title -->
 								<a class="descProduct-itensInList" href="#">Ultrabook Vaio Sony I3-2367m 320gb 4gb 11.6 Led Hdmi Vga</a>
+								
+								<!-- description -->
 								<p class="furtherDesc">Novo Lacrado Na Caixa, Com Nota Fisal Em Seu Nome + Garantia De 2 Anos</p>
 							</div>
+							
+							<!-- price -->
 							<p class="priceBox"><a href="#">R$ 9999,99</a></p>
+							
+							<!-- list exchange by -->
 							<p>Troco por Iphone Xbox ou Galaxy Cellphone</p>
 					</li>
 					
