--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
@@ -97,6 +97,7 @@ textarea:FOCUS {
     -webkit-box-shadow: 0px 0px 10px #DDD;
     margin-top: 15px;
     padding: 20px;
+    min-width: 1160px;
 }
 
 /** CUSTOM BUTTON **/
@@ -227,9 +228,10 @@ a .customButton2:hover, a .customButton2:focus, .customButton2:hover, .customBut
 }
 
 #topLinks ul li a {
-	border: 1px solid #0637B3;
+	background-color: #FF8719;
+	border: 3px solid #FF8719;
+	color: white;
 	padding: 2px 20px;
-	background-color: #CCC;
 	text-decoration: underline;
 }
 
