--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
@@ -458,7 +458,7 @@ a .customButton2:hover, a .customButton2:focus, .customButton2:hover, .customBut
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-/* 	width: 3456px; */
+	width: 3456px;
 }
 
 .indexListItens ul li {
