--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
@@ -361,6 +361,14 @@ a .customButton2:hover, a .customButton2:focus, .customButton2:hover, .customBut
 }
 .imagesSearchList {
 	float: left;
+	width: 110px;
+	height: 83px;
+	display: block;
+}
+.imagesSearchGrid {
+	width: 110px;
+	height: 83px;
+	display: block;
 }
 .descSearchListBox {
 	padding: 25px 0px 0px 25px;
