--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/css/styles-site.css
@@ -886,6 +886,12 @@ a .customButton2:hover, a .customButton2:focus, .customButton2:hover, .customBut
 	margin-right: 5px;
 	font-weight: bold;
 }
+.columnLeft {
+	text-align: left;
+}
+.columnRight {
+	text-align: right;
+}
 /** EXPIRED SESSION **/
 
 /** PAGE NOT FOUND EXCEPTION **/
