--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/.settings/org.eclipse.wst.common.component
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="barganhas">
+    <wb-module deploy-name="vendasebarganhas">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/resource"/>
         <wb-resource deploy-path="/" source-path="/war"/>
-        <property name="context-root" value="barganhas"/>
-        <property name="java-output-path" value="/barganhas/war/WEB-INF/classes"/>
+        <property name="java-output-path" value="/vendasebarganhas/war/WEB-INF/classes"/>
+        <property name="context-root" value="vendasebarganhas"/>
     </wb-module>
 </project-modules>
